traces/bug_913.txt
examples++-load/msh3.cpp:5943: error: DEAD_STORE
  The value written to &nbe (type int) is never used.
Showing all 1 steps of the trace


examples++-load/msh3.cpp:5943:3: Write of unused value
5941.     int nbv=Th.nv; // nombre de sommet 
5942.     int nbt=Th.nt; // nombre de triangles
5943.     int nbe=Th.nbe; // nombre d'aretes fontiere
          ^
5944.     
5945.     KN<long> zzempty(0);
